--- a/404.html
+++ b/404.html
@@ -1,36 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: page
+title: About
+permalink: /not-found/
+---
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<h1 class="page-header">
+    Page Not Found
+</h1>
 
-  <title>Dmitry Rogozhny</title>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-  <script>
-    (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-100633158-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
-</head>
-
-<body>
-  <h1>Page not found</h1>
-</body>
-
-</html>
+<h3>
+    back to <a href="/">home</a>
+</h3>
