Add Twitter account to contact details

--- a/about.html
+++ b/about.html
@@ -9,5 +9,5 @@ permalink: /about/
 </h1>
 
 <h3>
-    You can email me at <a href="mailto:dmitry@dmitryrogozhny.com">dmitry@dmitryrogozhny.com</a>
+    Send me an email at <a href="mailto:dmitry@dmitryrogozhny.com">dmitry@dmitryrogozhny.com</a> or contact me on <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>.
 </h3>
