Add about me on the home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
-layout: home
+    layout: home
 ---
 
-{% include posts-list.html title="Recent Posts" posts=site.posts postsToShow=10 %}
+{% include about-me.html %}
+
+{% include posts-list.html title="Latest in Blog" posts=site.posts postsToShow=6 %}
