Change About page

--- a/about.html
+++ b/about.html
@@ -5,9 +5,7 @@ permalink: /about/
 ---
 
 <h1 class="page-header">
-    Contact
+    About
 </h1>
 
-<h3>
-    Send me an email at <a href="mailto:dmitry@dmitryrogozhny.com">dmitry@dmitryrogozhny.com</a> or contact me on <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>.
-</h3>
+{% include about-me.html %}
