Add services description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     layout: home
 ---
 
-{% include about-me.html %}
+{% include about-me-short.html %}
 
-{% include posts-list.html title="Latest in Blog" posts=site.posts postsToShow=6 %}
+{% include posts-list.html title="Latest in Blog" posts=site.posts postsToShow=10 %}
