Optimize/limit showing images for posts

--- a/blog.html
+++ b/blog.html
@@ -8,4 +8,4 @@ permalink: /blog/
     Blog
 </h1>
 
-{% include posts-list.html title="" posts=site.posts%}
+{% include posts-list.html title="" posts=site.posts postsToHighlight=10 %}
