--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 
 {% include about-me-short.html %}
 
-{% include posts-list.html title="Latest in Blog" posts=site.posts postsToShow=10 %}
+{% include posts-list.html title="Latest in Blog" posts=site.posts postsToShow=10 postsToHighlight=10 %}
