Update description for pages

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: About
+description: Full stack developer specializing in SharePoint and Office 365. I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
 permalink: /about/
 ---
 
