--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Blog
+description: Notes on software development and architecture. SharePoint, Office 365, Azure, Flow, PowerApps, TypeScript, JavaScript, Node.js, React, functional programming.
 permalink: /blog/
 ---
 
