--- a/development.html
+++ b/development.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Office 365 Development
+description: Custom SharePoint and Office 365 development and architecture. Using SharePoint & Office 365 APIs, Azure, Flow, TypeScript, JavaScript, Node.js, and React.
 permalink: /services/development/
 ---
 
