--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
     layout: home
+    title: Dmitry Rogozhny
+    description: Full stack developer specializing in SharePoint and Office 365. I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
 ---
 
 {% include about-me-short.html %}
