--- a/intranet-configuration.html
+++ b/intranet-configuration.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Intranet Configuration
+description: SharePoint intranet configuration using out of box features for small- and medium-sized companies. Intranet configuration with a fixed cost and timeline.
 permalink: /services/intranet-configuration/
 ---
 
