--- a/services.html
+++ b/services.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Services
+description: Configuring SharePoint intranets, building document management systems and business applications. Customizing and developing for SharePoint and Office 365.
 permalink: /services/
 ---
 
