Add short space for office 365, remove nesting <p>

--- a/development.html
+++ b/development.html
@@ -6,11 +6,11 @@ permalink: /services/development/
 ---
 
 <h1 class="page-header custom-development__color">
-    Office 365 Development
+    Office&#8239;365 Development
 </h1>
 
-<p>
-    I can help you with:
+<div class="development-services">
+    I can help you with custom development for SharePoint and Office&#8239;365:
     <ul>
         <li>
             Implementation of web parts using <b>SharePoint Framework (SPFx)</b> for SharePoint Online and Teams;
@@ -22,10 +22,10 @@ permalink: /services/development/
             Creating <b>Office add-ins</b>;
         </li>
         <li>
-            Custom development with <b>Office 365 and Azure</b>.
+            Custom development with <b>Office&#8239;365 and Azure</b>.
         </li>
     </ul>
-</p>
+</div>
 
 {% include contact-details.html %}
 
