--- a/intranet-configuration.html
+++ b/intranet-configuration.html
@@ -10,7 +10,7 @@ permalink: /services/intranet-configuration/
 </h1>
 
 <div class="intranet-configuration">
-    <div class="table-of-content">
+    <nav class="table-of-content">
         <div>
             <a href="#intranet-configuration" class="link--stable link--no-decoration link--primary">Intranet
                 Configuration</a>
@@ -75,10 +75,10 @@ permalink: /services/intranet-configuration/
             </ul>
         </div>
 
-    </div>
+    </nav>
     <div class="intranet-configuration--intro">
         <p>
-            I can perform the intranet configuration using standard SharePoint and Office 365 features.
+            I can perform the intranet configuration using standard SharePoint and Office&#8239;365 features.
         </p>
         <p>
             Works great for small- and medium-sized companies. {% comment %} <b>10&ndash;500 employees</b>
@@ -105,7 +105,7 @@ permalink: /services/intranet-configuration/
         <h2 id="why-standard-features-only">
             Why standard features only?
         </h2>
-        <p>
+        <div>
             <ul>
                 <li>
                     <b>All essential intranet features included</b>&#8239;&mdash;&thinsp;modern SharePoint Online allows
@@ -120,15 +120,15 @@ permalink: /services/intranet-configuration/
                     be modified to your needs, no long requirements gathering needed.
                 </li>
                 <li>
-                    <b>Always compatible and up to date</b>&#8239;&mdash;&thinsp;you can use all the SharePoint and Office 365 features. The configuration stays compatible with future
-                    SharePoint and Office 365 features.
+                    <b>Always compatible and up to date</b>&#8239;&mdash;&thinsp;you can use all the SharePoint and Office&#8239;365 features. The configuration stays compatible with future
+                    SharePoint and Office&#8239;365 features.
                 </li>
                 <li>
                     <b>Extend and modify at will</b>&#8239;&mdash;&thinsp;intranet can be further modified and
                     customized as needed, there are no dependencies or limitations.
                 </li>
             </ul>
-        </p>
+        </div>
 
         <h2 id="what-is-included">
             What is included?
@@ -144,7 +144,7 @@ permalink: /services/intranet-configuration/
         <picture>
             <source srcset="{{site.baseUrl}}/assets/intranet-configuration/branding.webp" type="image/webp">
             <source srcset="{{site.baseUrl}}/assets/intranet-configuration/branding.jpg" type="image/jpeg">
-            <img alt="branding examples" srcset="" class="screenshot screenshot--border fade-in-fwd"
+            <img alt="branding examples" class="screenshot screenshot--border fade-in-fwd"
                 src="{{site.baseUrl}}/assets/intranet-configuration/branding.jpg" />
         </picture>
 
@@ -253,7 +253,7 @@ permalink: /services/intranet-configuration/
         {% endcomment %}
 
         <h2 id="how-to-start">How to start your intranet configuration?</h2>
-        <p>
+        <div>
             <ol>
                 <li>
                     Contact me to arrange a demo.
@@ -270,7 +270,7 @@ permalink: /services/intranet-configuration/
                     additional calls to discuss your requirements.
                 </li>
             </ol>
-        </p>
+        </div>
         {% comment %}
         <p>
             Contact me -> discuss and demo for applicability -> if ok, then sign up the contract -> discuss structure
