--- a/services.html
+++ b/services.html
@@ -33,8 +33,8 @@ permalink: /services/
         webpImage=development_webp_image
         imageAlt="custom development preview"
         class="custom-development__color"
-        title="Office 365 Development"
-        description="Custom development using SharePoint and Office 365."
+        title="Office&#8239;365 Development"
+        description="Custom development using SharePoint and Office&#8239;365."
         link=development_link
     %}
 </div>
