Add alternative spelling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
     layout: home
-    title: Dmitry Rogozhny
+    title: Dmitry Rogozhny (Dzmitry Rahozhny)
     description: Full stack developer specializing in SharePoint and Office 365. I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
 ---
 
