--- a/development.html
+++ b/development.html
@@ -2,7 +2,7 @@
 layout: page
 title: Office 365 Development
 description: Custom SharePoint and Office 365 development and architecture. Using SharePoint & Office 365 APIs, Azure, Flow, TypeScript, JavaScript, Node.js, and React.
-permalink: /services/development/
+permalink: /services/development
 ---
 
 <h1 class="page-header custom-development__color">
