--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 ---
     layout: home
-    title: Dmitry Rogozhny (Dzmitry Rahozhny)
-    description: Full stack developer specializing in SharePoint and Office 365. I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
+    title: Dzmitry Rahozhny (Dmitry Rogozhny)
+    description: Software Developer specializing in Power Platform and Microsoft 365. I work with Power Platform (Power Apps, Power Automate, Power BI, Power Pages, Dataverse), Microsoft 365 (SharePoint SPFx, Teams, Graph API), Azure, TypeScript, JavaScript, Node.js, Next.js, and React.
 ---
 
 {% include about-me-short.html %}
 
 {% include posts-list.html title="Latest in Blog" posts=site.posts postsToShow=10 postsToHighlight=10 %}
+
+<a class="link--stable link--no-decoration" href="/blog/">View All Posts</a>
